--- a/app/colors.css
+++ b/app/colors.css
@@ -6,7 +6,7 @@
     --color-gray-400: #8D8E90;
     --color-gray-500: #AAAAAA; /*new*/
     --color-gray-600: #5E5E5E; /*new*/
-    --color-gray-700: #C1C4CC;
+    --color-gray-700: #6B6B6B; /*new*/
     --color-gray-800: #212121;
     --color-gray-900: #222222; /*new*/
 
