--- a/components/Home/Support/index.module.scss
+++ b/components/Home/Support/index.module.scss
@@ -26,4 +26,14 @@
   }
 
   @apply bg-center bg-no-repeat bg-cover;
+
+  .input {
+    &:-webkit-autofill,
+    &:-webkit-autofill:hover,
+    &:-webkit-autofill:focus {
+      -webkit-box-shadow: inset 0 0 0 50px transparent !important;
+      -webkit-text-fill-color: #fff !important;
+      transition: 5000s ease background-color !important;
+    }
+  }
 }
