--- a/components/Product/ImagesBlock/index.scss
+++ b/components/Product/ImagesBlock/index.scss
@@ -22,3 +22,13 @@
       border: 1px solid transparent;
 	}
 }
+
+.image-gallery-icon.image-gallery-fullscreen-button {
+  display: contents;
+
+  &::after {
+    content: '';
+    inset: 0;
+    position: absolute;
+  }
+}
